<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<parent>
		<groupId>it.softsolutions.bestx</groupId>
		<artifactId>bestxengine-parent</artifactId>
		<version>4.5.0</version>
	</parent>

	<artifactId>bestxengine-cs</artifactId>
	<packaging>jar</packaging>
	<name>BestX - bestxengine-cs</name>

	<dependencies>
		<dependency>
			<groupId>p6spy</groupId>
			<artifactId>p6spy</artifactId>
			<version>3.8.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-model-builder</artifactId>
		</dependency>

		<dependency>
			<groupId>it.softsolutions.bestx</groupId>
			<artifactId>bestxengine</artifactId>
			<version>${project.parent.version}</version>
			<exclusions>
				<exclusion>
				    <groupId>org.apache.logging.log4j</groupId>
				    <artifactId>log4j</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.logging.log4j</groupId>
					<artifactId>log4j-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>it.softsolutions.bestx</groupId>
			<artifactId>bestxengine-product</artifactId>
			<version>${project.parent.version}</version>

			<exclusions>
				<exclusion>
				    <groupId>org.apache.logging.log4j</groupId>
				    <artifactId>log4j</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.logging.log4j</groupId>
					<artifactId>log4j-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>it.softsolutions.bestx</groupId>
			<artifactId>bestxengine-common</artifactId>
			<version>${project.parent.version}</version>

			<exclusions>
				<exclusion>
				    <groupId>org.apache.logging.log4j</groupId>
				    <artifactId>log4j</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.logging.log4j</groupId>
					<artifactId>log4j-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>it.softsolutions.bestx</groupId>
			<artifactId>bestx-protocol-api</artifactId>
			<version>${project.parent.version}</version>
		</dependency>
		<dependency>
			<groupId>it.softsolutions.bestx</groupId>
			<artifactId>bestx-bloomberg-market</artifactId>
			</dependency>
		<dependency>
			<groupId>it.softsolutions.bestx</groupId>
			<artifactId>bestx-tradeweb-market</artifactId>
		</dependency>
		<dependency>
			<groupId>it.softsolutions.bestx</groupId>
			<artifactId>bestx-bondvision-market</artifactId>
		</dependency>
		<dependency>
			<groupId>it.softsolutions.bestx</groupId>
			<artifactId>bestx-marketaxess-market</artifactId>
			</dependency>
		<dependency>
			<groupId>it.softsolutions.bestx</groupId>
			<artifactId>bestx-fix-client</artifactId>
			<version>${project.parent.version}</version>
		</dependency>

		<dependency>
			<groupId>it.softsolutions.bestx</groupId>
			<artifactId>bestx-mq-service</artifactId>
			<version>${project.parent.version}</version>
			<exclusions>
				<exclusion>
					<groupId>javax.transaction</groupId>
					<artifactId>jta</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>it.softsolutions.bestx.web</groupId>
			<artifactId>bestxgui-usermanagement</artifactId>
		</dependency>
		<dependency>
			<groupId>it.softsolutions.xtrade2</groupId>
			<artifactId>jpapi</artifactId>
		</dependency>
		<dependency>
			<groupId>it.softsolutions.commons</groupId>
			<artifactId>license-validator</artifactId>
		</dependency>
		<dependency>
			<groupId>it.softsolutions.commons</groupId>
			<artifactId>ib4j</artifactId>
		</dependency>
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<exclusions>
				<exclusion>
				    <groupId>org.apache.logging.log4j</groupId>
				    <artifactId>log4j</artifactId>
				</exclusion>
				<exclusion>
					<groupId>log4j</groupId>
					<artifactId>log4j</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jasypt</groupId>
			<artifactId>jasypt</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jasypt</groupId>
			<artifactId>jasypt-spring31</artifactId>
		</dependency>
		<dependency> <!-- needed for annotation @Transactional in SqlCSOperationStateAuditDao -->
		    <groupId>javax.interceptor</groupId>
		    <artifactId>javax.interceptor-api</artifactId>
		    <version>1.2</version>
		</dependency>
	    <dependency>
			<groupId>javax.jms</groupId>
			<artifactId>javax.jms-api</artifactId>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
		</dependency>
		<dependency>
			<groupId>net.sf.json-lib</groupId>
			<artifactId>json-lib</artifactId>
			<classifier>jdk15</classifier>
		</dependency>
		
	</dependencies>
	<profiles>
	  <profile>
	    <id>java8-doclint-disabled</id>
	    <activation>
	      <jdk>[1.8,)</jdk>
	    </activation>
	    <properties>
	      <javadoc.opts>-Xdoclint:none</javadoc.opts>
	    </properties>
	  </profile>
	</profiles>
	
	<build>
       <resources>
           <resource>
              <directory>target/additional_res</directory>
              <includes>
                 <include>*/</include>
              </includes>
           </resource>
		    <resource>
				<directory>src/main/resources</directory>
				<includes>
					<include>*/</include>
				</includes>
			</resource>
        </resources>
		<plugins>
		     <plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-javadoc-plugin</artifactId>
		        <version>2.9</version>
		        <executions>
		            <execution>
		                <id>attach-javadocs</id>
		                <goals>
		                    <goal>jar</goal>
		                </goals>
		                <configuration>
		                    <additionalparam>${javadoc.opts}</additionalparam>
		                </configuration>
		            </execution>
		        </executions>
		    </plugin>
		    <plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-site-plugin</artifactId>
		        <version>3.3</version>
		        <configuration>
		          <reportPlugins>
		            <plugin>
		              <groupId>org.apache.maven.plugins</groupId>
		              <artifactId>maven-javadoc-plugin</artifactId>
		              <configuration>
		                <additionalparam>${javadoc.opts}</additionalparam>
		              </configuration>
		            </plugin>
		          </reportPlugins>
		        </configuration>
		      </plugin>

<!--
			  <plugin>
               <artifactId>maven-antrun-plugin</artifactId>
               <executions>
                  <execution>
                     <phase>generate-resources</phase>
                     <goals>
                        <goal>run</goal>
                     </goals>
                     <configuration>
                        <tasks>
                           <mkdir dir="$ {project.build.directory}/additional_res" />
                           <mkdir dir="${project.build.directory} /additional_res/META-INF" />
                           <mkdir dir="$ {project.build.directory}/additional_res/META-INF/svn" />
                           <exec dir="${basedir}" executable="svn" failifexecutionfails="false" output="${project.build.directory} /additional_res/META-INF/svn/svn_info.txt">
                              <arg line="info" />
                           </exec>
                        </tasks>
                     </configuration>
                  </execution>
               </executions>
            </plugin>
-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
						<encoding>UTF-8</encoding>
						<verbose>true</verbose>
						<fork>true</fork>
						<compilerVersion>1.8</compilerVersion>
						<source>1.8</source>
						<target>1.8</target>
				</configuration>
			</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
						<configuration>
							<encoding>UTF-8</encoding>
						</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<addMavenDescriptor />
							<manifest>
								<addClasspath>true</addClasspath>
								<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
								<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
								<mainClass>it.softsolutions.bestx.Main</mainClass>
							</manifest>
							<manifestEntries>
								<Build-Number>${BUILD_NUMBER}</Build-Number>
								<Build-ID>${BUILD_ID}</Build-ID>
								<DB-Version>${DB-Version}</DB-Version>
							</manifestEntries>
					</archive>
		 		</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<descriptors>
						<descriptor>src/main/assembly/assembly.xml</descriptor>
					</descriptors>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<!-- <forkCount>2.5C</forkCount> <reuseForks>true</reuseForks> -->
					<argLine>-server -XX:+UseParallelGC
					    -XX:+AggressiveOpts -XX:+UseFastAccessorMethods
					    -Xms1024m -Xmx2048m -XX:PermSize=128m
					    -XX:MaxPermSize=256m</argLine>
					<additionalClasspathElements>
						<additionalClasspathElement>${basedir}/src/test/config</additionalClasspathElement>
					</additionalClasspathElements>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.basepom.maven</groupId>
				<artifactId>duplicate-finder-maven-plugin</artifactId>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
			<!-- Ignore/Execute plugin execution -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
							<!-- copy-dependency plugin -->
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-dependency-plugin</artifactId>
										<versionRange>[1.0.0,)</versionRange>
										<goals>
											<goal>copy-dependencies</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<distributionManagement>
		<repository>
			<id>releases</id>
			<url>${Release.url}</url>
		</repository>
		
		<snapshotRepository>
			<id>snapshots</id>
			<url>${Snapshot.url}</url>
		</snapshotRepository>
	</distributionManagement>
</project>
